--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "ext-pcntl": "*",
     "ext-posix": "*",
     "josantonius/cli-printer": "^1.0",
-    "ua-parser/uap-php": "*"
+    "ua-parser/uap-php": "*",
+    "vlucas/phpdotenv": "^5.6"
   },
   "autoload": {
     "psr-4": {
