--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,17 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/" ,
+      "Tests\\": "tests/"
+
     }
   },
   "config": {
     "allow-plugins": {
       "php-http/discovery": true
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.5"
   }
 }
