--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ DATABASE_PASSWORD=password
 DATABASE_SCHEMA=public
 LINKS_TABLE=links_statics
 POSTGRES_POOL_SIZE=16
+
+DASHBOARD_HOST=127.0.0.1
+DASHBOARD_PORT=8105
