--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "ext-posix": "*",
     "josantonius/cli-printer": "^1.0",
     "ua-parser/uap-php": "*",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "ext-redis": "*"
   },
   "autoload": {
     "psr-4": {
